fix header alignment

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ nav .icon-burger .line {
     background-position: center;
     background-size: contain;
     position: relative;
-    margin-top: 4vw;
+    margin-top: 100px;
 }
 
 #main_sec {
@@ -136,7 +136,8 @@ nav .icon-burger .line {
 }
 
 #main_sec h2 {
-    text-align: center;
+    text-align: left;
+    transform: translate(5%, 0%);
     font-size: 28px;
     font-family: 'open sans';
     color: #ffffff;
@@ -150,7 +151,7 @@ nav .icon-burger .line {
     }
 
     .main{
-        margin-top: 1vw;
+        margin-top: 8vw;
     }
 
     .gallery {
